crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_issue_175_native_span_unicode_panic.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..122
  PARAGRAPH@0..122
    INLINE_HTML_SPAN@0..53
      TEXT@0..5 "<span"
      WHITESPACE@5..6 " "
      HTML_ATTRS@6..17
        TEXT@6..13 "class=\""
        ATTR_CLASS@13..16 "rtl"
        TEXT@16..17 "\""
      TEXT@17..18 ">"
      SPAN_CONTENT@18..46
        TEXT@18..46 "(شربنا من ال ..."
      SPAN_BRACKET_CLOSE@46..53 "</span>"
    TEXT@53..121 " and feel part of it. ..."
    NEWLINE@121..122 "\n"
