crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_line_block_in_list_blockquote.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 97
expression: cst_output
---
DOCUMENT@0..33
  LIST@0..33
    LIST_ITEM@0..33
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      BLOCK_QUOTE@2..33
        BLOCK_QUOTE_MARKER@2..3 ">"
        WHITESPACE@3..4 " "
        LINE_BLOCK@4..33
          LINE_BLOCK_LINE@4..17
            LINE_BLOCK_MARKER@4..6 "| "
            TEXT@6..16 "First line"
            NEWLINE@16..17 "\n"
          LINE_BLOCK_LINE@17..33
            WHITESPACE@17..19 "  "
            BLOCK_QUOTE_MARKER@19..20 ">"
            WHITESPACE@20..21 " "
            TEXT@21..32 "  continued"
            NEWLINE@32..33 "\n"
